fix cross origin issues

--- a/components/post_message_channel/body.erb
+++ b/components/post_message_channel/body.erb
@@ -1,1 +1,1 @@
-<iframe id="my_iframe" src="/post_message_channel/child"></iframe>
+<iframe id="my_iframe" src="http://js2.dev/post_message_channel/child"></iframe>
